# pta-toolbox

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: prompt.md  struct.md
scripts/: main.py
src/ptatoolbox/: __init__.py
src/ptatoolbox/.locals/: atnf_cat.pkl  pta_cat.pkl
src/ptatoolbox/catalog/: __init__.py  catalog.py  distr.py  factory.py  funcs.py  io.py  models.py  names.py  pulsar.py  synth_data.py
src/ptatoolbox/catalogs/: catalog.py  factory.py  pulsar.py
src/ptatoolbox/core/: __init__.py  constants.py
src/ptatoolbox/io/: __init__.py  atnf_io.py  manager.py  pickle_io.py
src/ptatoolbox/visuals/: __init__.py  basic.py
tests/: test_atnf.py  test_catalog.py  test_io_manager.py  test_simple_cat.py
tests/test_catalog/: test_catalog.py  test_factory.py  test_models.py
tests/test_io/: test_atnf_io.py  test_manager.py  test_pickle_io.py
