[project]
name = "ptatoolbox"
version = "0.1.0"
description = "Pulsar Timing Array Toolbox for GW simulations and sky imaging"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Slava Chernosov", email = "chernosov.w@gmail.com"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "corner>=2.2",
    "tqdm>=4.65",
    "healpy>=1.16",
    "astropy>=5.3",
    "psrqpy>=1.0",
    "libstempo>=2.4",
    "enterprise-pulsar>=3.3",
    "enterprise-extensions>=3.0",
    "dynesty>=2.1",
    "ptmcmcsampler>=1.0",
    "colorlog>=6.7",
    "jupyter>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "sphinx",
    "furo",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptatoolbox"]   # или ["ptatoolbox"], если без src/

[project.scripts]
pta-sim = "scripts.run_simulation:main"
pta-image = "scripts.run_imaging:main"